--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        submodules: true
+        with:
+          submodules: true
 
       - uses: ilammy/msvc-dev-cmd@v1
 
