--- a/.github/workflows/linux-ci.yml
+++ b/.github/workflows/linux-ci.yml
@@ -1,4 +1,4 @@
-name: build
+name: linux
 
 on:
   workflow_dispatch:
@@ -10,14 +10,12 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: true
-
-      - uses: ilammy/msvc-dev-cmd@v1
 
       - name: Build test-program
         run: |
