--- a/.github/workflows/code-analysis-ci.yml
+++ b/.github/workflows/code-analysis-ci.yml
@@ -8,7 +8,12 @@
 
 name: Microsoft C++ Code Analysis
 
-# on:
+on:
+  workflow_run:
+    workflows: ["ignore"]
+    types: [requested]
+    branches:
+      - "ignore"
 #   push:
 #     branches: [ "master" ]
 #   pull_request:
